--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -15,7 +15,7 @@
     <% @microposts.each do |micropost| %>
       <tr>
         <td><%= micropost.message %></td>
-        <td><%= micropost.user %></td>
+        <td><%= micropost.user.email %></td>
         <td><%= link_to 'Show', micropost %></td>
         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
         <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
